# binance-data-collector

./: LICENSE.txt  Makefile  README.md  pyproject.toml
binance_data_collector/: __about__.py  __init__.py  download.py  s3.py  utils.py
tests/: test_download.py  test_utils.py
